@@ -46,6 +46,11 @@
    - deraadt@cvs.openbsd.org 2001/06/23 02:33:05
      [sftp.1 sftp-server.8 ssh-keygen.1]
      join .%A entries; most by bk@rt.fm
+   - markus@cvs.openbsd.org 2001/06/23 02:34:33
+     [kexdh.c kexgex.c kex.h pathnames.h readconf.c servconf.h ssh.1 
+      sshconnect1.c sshconnect2.c sshconnect.c sshconnect.h sshd.8]
+     get rid of known_hosts2, use it for hostkey lookup, but do not 
+     modify.
 
 20010622
  - (stevesk) handle systems without pw_expire and pw_change.
@@ -5730,4 +5735,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1308 2001/06/25 04:32:38 mouring Exp $
+$Id: ChangeLog,v 1.1309 2001/06/25 04:37:41 mouring Exp $
